Adicionada pausa ao simulador. Remoção de comentários e de atualizações desnecessárias de interface. Adicionado CALL ao montador